Main Battle Info 90% Localized
Missing some node types, battle scenarios and Enemy Fleet Formations Windws not TLed and localized yet.

--- a/BattleInfoPlugin/Views/CellTypeView.xaml
+++ b/BattleInfoPlugin/Views/CellTypeView.xaml
@@ -100,7 +100,7 @@
                         </Style>
                     </Border.Style>
                     <TextBlock Margin="9,2"
-                               Text="{Binding CellType, Mode=OneWay}"
+                               Text="{Binding CellString, Mode=OneWay}"
                                HorizontalAlignment="Center"
                                Style="{StaticResource DefaultTextStyleKey}"
                                Foreground="White" />
