--- a/BattleInfoPlugin/Views/Fleet.xaml
+++ b/BattleInfoPlugin/Views/Fleet.xaml
@@ -97,7 +97,7 @@
                                     <StackPanel Orientation="Horizontal">
                                         <StackPanel>
                                             <TextBlock>
-                                                <Run Text="火力" />
+                                                <Run Text="{Binding Resources.Ship_Firepower, Source={x:Static models:ResourceService.Current}, Mode=OneWay}" />
                                                 <Run
                                                     Text="{Binding SumFirepower, Converter={StaticResource UnknownValueConverter}, Mode=OneWay}"
                                                     Style="{DynamicResource EmphaticTextElementStyleKey}"
@@ -114,7 +114,7 @@
                                             </TextBlock>
 
                                             <TextBlock>
-                                                <Run Text="雷装" />
+                                                <Run Text="{Binding Resources.Ship_Torpedo, Source={x:Static models:ResourceService.Current}, Mode=OneWay}" />
                                                 <Run
                                                     Text="{Binding SumTorpedo, Converter={StaticResource UnknownValueConverter}, Mode=OneWay}"
                                                     Style="{DynamicResource EmphaticTextElementStyleKey}"
@@ -131,7 +131,7 @@
                                             </TextBlock>
 
                                             <TextBlock>
-                                                <Run Text="対空" />
+                                                <Run Text="{Binding Resources.Ship_AA, Source={x:Static models:ResourceService.Current}, Mode=OneWay}" />
                                                 <Run
                                                     Text="{Binding SumAA, Converter={StaticResource UnknownValueConverter}, Mode=OneWay}"
                                                     Style="{DynamicResource EmphaticTextElementStyleKey}"
@@ -148,7 +148,7 @@
                                             </TextBlock>
 
                                             <TextBlock>
-                                                <Run Text="装甲" />
+                                                <Run Text="{Binding Resources.Ship_Armor, Source={x:Static models:ResourceService.Current}, Mode=OneWay}" />
                                                 <Run
                                                     Text="{Binding SumArmer, Converter={StaticResource UnknownValueConverter}, Mode=OneWay}"
                                                     Style="{DynamicResource EmphaticTextElementStyleKey}"
@@ -167,15 +167,15 @@
 
                                         <StackPanel>
                                             <TextBlock>
-                                                <Run Text="対潜" />
+                                                <Run Text="{Binding Resources.Ship_ASW, Source={x:Static models:ResourceService.Current}, Mode=OneWay}" />
                                                 <Run Text="{Binding SlotsASW, Mode=OneWay, StringFormat={}(+{0})}" />
                                             </TextBlock>
                                             <TextBlock>
-                                                <Run Text="命中" />
+                                                <Run Text="{Binding Resources.Ship_Hit, Source={x:Static models:ResourceService.Current}, Mode=OneWay}" />
                                                 <Run Text="{Binding SlotsHit, Mode=OneWay, StringFormat={}(+{0})}" />
                                             </TextBlock>
                                             <TextBlock>
-                                                <Run Text="回避" />
+                                                <Run Text="{Binding Resources.Ship_Evade, Source={x:Static models:ResourceService.Current}, Mode=OneWay}" />
                                                 <Run
                                                     Text="{Binding SlotsEvade, Mode=OneWay, StringFormat={}(+{0})}" />
                                             </TextBlock>
@@ -352,9 +352,11 @@
                             </Grid.RenderTransform>
                             <Border Background="{DynamicResource FleetRepairingBrushKey}"
                                     Opacity=".4" />
-                            <TextBlock Text="退避"
+                            <TextBlock Text="{Binding Resources.Fleet_Escape, Source={x:Static models:ResourceService.Current}, Mode=OneWay}"
                                        Style="{DynamicResource EmphaticTextStyleKey}"
-                                       Margin="16,4" />
+                                       TextAlignment="Center"
+                                       Width="70"
+                                       Margin="0,4" />
                         </Grid>
 
                         <Grid x:Name="SinkIndicator"
@@ -369,9 +371,11 @@
                             <Border Background="#A00000"
                                     Opacity=".4"
                                     IsHitTestVisible="False" />
-                            <TextBlock Text="撃沈"
+                            <TextBlock Text="{Binding Resources.Fleet_Sunk, Source={x:Static models:ResourceService.Current}, Mode=OneWay}"
                                        Style="{DynamicResource EmphaticTextStyleKey}"
-                                       Margin="16,4"
+                                       TextAlignment="Center"
+                                       Width="70"
+                                       Margin="0,4"
                                        IsHitTestVisible="False" />
                         </Grid>
                     </Grid>
