--- a/BattleInfoPlugin/SampleData/CellTypeViewModelSampleData.xaml
+++ b/BattleInfoPlugin/SampleData/CellTypeViewModelSampleData.xaml
@@ -3,7 +3,21 @@
                               CellType="ボス,夜戦">
     <viewModels:CellTypeViewModel.SigleCellTypes>
         <x:Array Type="viewModels:CellTypeViewModel">
+            <viewModels:CellTypeViewModel CellType="None" />
+            <viewModels:CellTypeViewModel CellType="開始" />
+            <viewModels:CellTypeViewModel CellType="補給" />
+            <viewModels:CellTypeViewModel CellType="渦潮" />
+            <viewModels:CellTypeViewModel CellType="戦闘" />
             <viewModels:CellTypeViewModel CellType="ボス" />
+            <viewModels:CellTypeViewModel CellType="気のせい" />
+            <viewModels:CellTypeViewModel CellType="航空戦" />
+            <viewModels:CellTypeViewModel CellType="母港" />
+            <viewModels:CellTypeViewModel CellType="揚陸地点" />
+            <viewModels:CellTypeViewModel CellType="泊地" />
+            <viewModels:CellTypeViewModel CellType="レーダー射撃" />
+            <viewModels:CellTypeViewModel CellType="空襲戦" />
+            <viewModels:CellTypeViewModel CellType="航空偵察" />
+            <viewModels:CellTypeViewModel CellType="能動分岐" />
             <viewModels:CellTypeViewModel CellType="夜戦" />
         </x:Array>
     </viewModels:CellTypeViewModel.SigleCellTypes>
