--- a/BattleInfoPlugin/Views/BattleWindow.xaml
+++ b/BattleInfoPlugin/Views/BattleWindow.xaml
@@ -83,7 +83,8 @@
             </Grid.ColumnDefinitions>
 
             <views:NextCellInfoView Grid.Column="2"
-                                    DataContext="{Binding Battle.NextCellInfo}"/>
+                                    DataContext="{Binding Battle.NextCellInfo}"
+                                    Margin="0,8,0,0" />
         </Grid>
 
         <ScrollViewer Grid.Row="1"
