--- a/BattleInfoPlugin/Views/ToolView.xaml
+++ b/BattleInfoPlugin/Views/ToolView.xaml
@@ -62,7 +62,8 @@
                     </i:EventTrigger>
                 </i:Interaction.Triggers>
             </Button>
-            <views:NextCellInfoView DataContext="{Binding Battle.NextCellInfo}" />
+            <views:NextCellInfoView DataContext="{Binding Battle.NextCellInfo}"
+                                    Margin="0,4,0,0" />
 
         </DockPanel>
         <ScrollViewer Grid.Row="1"
